[package]
name = "spending"
version = "0.0.0"
description = "show me my spending patterns"
authors = ["Robert Kruszewski <robert@robert.sx>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
warp = "0.3.1"
oauth2 = "4.0.0"
http = "0.2.4"
serde = "1.0.126"